# fluid-postgres-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  TESTING-METHODOLOGY.md  mcp-server-brief.md  pyproject.toml
scripts/examples/: aws-ssm-ec2-tunnel.py  aws-ssm-rds-tunnel.py
src/postgres_mcp/: __main__.py  config.py  event_store.py  server.py
src/postgres_mcp/index/: dta_calc.py  llm_opt.py
src/postgres_mcp/sql/: __init__.py  connection_script.py  safe_sql.py  sql_driver.py  utils.py
tasks/001-mcp-initial/: 2026-05-08-001-mcp-initial-prd.md  2026-05-08-001-mcp-initial-tasks.md  2026-05-08-001-mcp-initial-tech-design.md
tasks/002-connection-tunnel-script/: 2026-05-10-002-connection-tunnel-script-prd.md  2026-05-10-002-connection-tunnel-script-tasks.md  2026-05-10-002-connection-tunnel-script-tech-design.md
tasks/003-installation-docs/: 2026-05-11-003-installation-docs-prd.md  2026-05-11-003-installation-docs-tasks.md  2026-05-11-003-installation-docs-tech-design.md
tests/: README.md  conftest.py  k8s_fixtures.py
tests/e2e/: mcp_client_fixtures.py  ssm_fixtures.py  test_cli_wiring.py  test_long_running_script.py  test_mcp_execute_sql.py  test_mcp_smoke.py  test_mcp_status.py  test_outcomes_capture.py  test_server_lifecycle.py  test_ssm_disruption.py
tests/e2e/fixtures/: long_running_passthrough.sh
tests/integration/: test_file_output.py  test_pre_connect.py  test_reconnect.py  test_status.py  test_timeout.py
tests/unit/: test_config.py  test_event_store.py  test_status_tool.py  test_transport.py
tests/unit/database_health/: test_database_health_tool.py  test_sequence_health_calc.py
tests/unit/explain/: test_server_integration.py
tests/unit/index/: test_dta_calc.py
tests/unit/sql/: test_connection_script.py  test_db_conn_pool.py  test_file_output.py  test_pre_connect_hook.py  test_progress.py  test_reconnect.py  test_timeout.py
tests/unit/top_queries/: test_top_queries_calc.py
