[project]
name = "fluid-postgres-mcp"
version = "0.1.3"
description = "Fluid PostgreSQL MCP Server — reliable database interface for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.25.0",
    "psycopg[binary]>=3.3.2",
    "humanize>=4.15.0",
    "pglast==7.11",
    "attrs>=25.4.0",
    "psycopg-pool>=3.3.0",
    "instructor>=1.14.4",
]
license = "MIT"
license-files = ["LICENSE"]

[[project.authors]]
name = "D Povesma"
email = "povesma@users.noreply.github.com"

[project.urls]
Homepage = "https://github.com/povesma/fluid-postgres-mcp"
Repository = "https://github.com/povesma/fluid-postgres-mcp"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/postgres_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/postgres_mcp",
    "scripts/examples/*.py",
    "README.md",
    "ARCHITECTURE.md",
    "TESTING-METHODOLOGY.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    ".gitignore",
    "tests",
]

[project.scripts]
fluid-postgres-mcp = "postgres_mcp:main"

# [tool.pyright]
# venvPath = "."
# venv = ".venv"

[tool.pytest.ini_options]
pythonpath = ["./src"]
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
dev = [
    "docker>=7.1.0",
    "pyright==1.1.408",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "ruff==0.14.13",
]

[tool.black]
line-length = 150

[tool.ruff]
line-length = 150
target-version = "py39"
exclude = [".venv*"]

lint.select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "W",   # pycodestyle warnings
    # "C90", # mccabe complexity
    "N",   # pep8-naming
    # "D",   # pydocstyle
    "UP",  # pyupgrade
    "RUF"  # ruff-specific rules
]

# TODO: Remove these ignores when fixing #129 (code modernization)
lint.ignore = [
    "UP006",  # Use `list` instead of `List` for type annotations
    "UP035",  # Import from `collections.abc` instead of `typing`
    "UP045",  # Use `X | None` instead of `Optional[X]`
    "RUF059", # Unused unpacked variable
    "RUF100", # Unused noqa directive
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["postgres_mcp"]

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.10"
reportMissingTypeStubs = false
# reportUnknownMemberType = true
# reportUnknownParameterType = true
# reportUnknownVariableType = true
# reportUnknownArgumentType = true
reportPrivateUsage = true
reportUntypedFunctionDecorator = true
reportMissingTypeArgument = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
# reportUnnecessaryComparison = true
